--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:watch": "jest --watch --config ./jest.unit.config.ts",
     "test:cov": "jest --coverage --config ./jest.unit.config.ts",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./jest.e2e.config.ts",
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
@@ -65,6 +66,7 @@
     "jest": "28.1.3",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
